- Ignore Vote_All setting when you already voted on object (#185)
- Added Trakt support (Shoko APIv2) (#33)
- Disable gzip on localhost (#161)
- Episodes sort if fixed for webinterface (#176)
- Proper handle error with network error (#187)
- Support multiple files per Episode (#191)
- Added 'Inspect files' to context menu
- Playlist support (#145)
- Added 'Playlist MODE' to context menu

v2.0.22 (02/02/2017)
- fix years/tags (sorry ;-) )
- fix grouped series
- moving to proper api url
- fixing missing subtitle stream index

v2.0.19 (18/01/2017)
- Adding "Trigger Voting after each episode"
- Fix some window headings
- Expand and move around the Tag Filter based on AniDB's docs. (Still missing many I'm sure)
- try catch duration
- fix season to accept new and old format

v2.0.18 (21/12/2016)
- PEP8 Clean up
- Update setCast for Kodi 17 (beta 6 or higher)
- Debug log to pycharm
- Fix typo in GroupFilter
- More work with series level and accept subfilters
- Allow wiping parameters by passing None to set_parameter. Change JMM to Shoko. Make menu loading more reliable for apply at series level groups

v2.0.17 (22/10/2016)
- Some cleanup, prevent a crash on userid, provide local file path to player if it is available, use set_parameters from now on to avoid duplicates and other url weirdness
- Rewrite stream info
- Also provide stream info via addStreamInfo (this writes directly to the stream data in Kodi, by not providing it, Kodi may try to generate it, but it seems to fail)
- rescrape stream details on play and provide them. Also, FIXED DSPLAYER!!!!
- fix a few errors (unicode in filenames for newer_key and set_parameter)
- refactor remove_html to remove_anidb_links. also apply the filter in episodes
- some more cleanup. urllib.quote the value in set_parameter
- refactor helper functions into util. clean up imports. migrate other non-specialized calls to encode and decode
- Unable to play files after @76f14b7 commit