@@ -15,6 +15,8 @@ v2.1.0 ()
 - Added 'Inspect files' to context menu
 - Playlist support (#145)
 - Added 'Playlist MODE' to context menu
+- Added proper resume (#154)
+- Added 'Resume' to settings
 
 v2.0.22 (02/02/2017)
 - fix years/tags (sorry ;-) )
